<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="#ffffff" android:weightSum="1">

    <!-- C1 -->

    <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/C1"
            android:layout_marginLeft="10dp"
            android:id="@+id/btnScanC1"/>
    <!--
    <TextView
            android:id="@+id/txtResultC1"
            android:layout_alignTop="@+id/txtCell"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:visibility="invisible"
            android:text="@string/RSSV"
            android:layout_toRightOf="@+id/btnScanC1"
            android:singleLine="true"/> -->

    <!-- ............................................................ -->
    <!-- ............................................................ -->
    <!-- ............................................................ -->

    <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/C2"
            android:layout_marginLeft="20dp"
            android:layout_alignBottom="@+id/btnScanC1"
            android:layout_toRightOf="@+id/btnScanC1"
            android:id="@+id/btnScanC2"/>
    <!--
    <TextView
            android:id="@+id/txtResultC10"
            android:layout_alignTop="@+id/txtCell11"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:visibility="invisible"
            android:text="@string/RSSV"
            android:layout_toRightOf="@+id/btnScanC3"
            android:singleLine="true"/>  -->

    <!-- ............................................................ -->
    <!-- ............................................................ -->
    <!-- ............................................................ -->

    <!-- C2 -->


    <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/C3"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/btnScanC2"
            android:layout_alignBottom="@+id/btnScanC2"
            android:id="@+id/btnScanC3"/>
    <!--
    <TextView
            android:id="@+id/txtResultC2"
            android:layout_alignTop="@+id/txtCell2"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:visibility="invisible"
            android:text="@string/RSSV"
            android:layout_toRightOf="@+id/btnScanC2"
            android:singleLine="true"/> -->

    <!-- ............................................................ -->
    <!-- ............................................................ -->
    <!-- ............................................................ -->

    <!-- C11 -->

    <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/C4"
            android:layout_below="@id/btnScanC1"
            android:layout_marginLeft="10dp"
            android:id="@+id/btnScanC4"/>
    <!--
    <TextView
            android:id="@+id/txtResultC11"
            android:layout_alignTop="@+id/txtCell"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:visibility="invisible"
            android:text="@string/RSSV"
            android:layout_toRightOf="@+id/btnScanC11"
            android:singleLine="true"/>  -->

    <!-- ............................................................ -->
    <!-- ............................................................ -->
    <!-- ............................................................ -->

    <!-- C3 -->

    <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/C5"
            android:layout_alignTop="@+id/btnScanC4"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/btnScanC4"
            android:id="@+id/btnScanC5"/>

    <!--
    <TextView
            android:id="@+id/txtResultC3"
            android:layout_alignTop="@+id/txtCell3"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:visibility="invisible"
            android:text="@string/RSSV"
            android:layout_toRightOf="@+id/btnScanC3"
            android:singleLine="true"/> -->

    <!-- ............................................................ -->
    <!-- ............................................................ -->
    <!-- ............................................................ -->

    <!-- C12 -->

    <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/C6"
            android:layout_alignBottom="@+id/btnScanC4"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/btnScanC5"
            android:id="@+id/btnScanC6"/>
    <!--
    <TextView
            android:id="@+id/txtResultC12"
            android:layout_alignTop="@+id/txtCell12"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/RSSV"
            android:visibility="invisible"
            android:layout_toRightOf="@+id/btnScanC12"
            android:singleLine="true"/> -->

    <!-- ............................................................ -->
    <!-- ............................................................ -->
    <!-- ............................................................ -->


    <!-- C4 -->
    <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/C7"
            android:layout_below="@id/btnScanC4"
            android:layout_marginLeft="10dp"
            android:id="@+id/btnScanC7"/>
    <!--
    <TextView
            android:id="@+id/txtResultC4"
            android:layout_alignTop="@+id/txtCell4"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/RSSV"
            android:visibility="invisible"
            android:layout_toRightOf="@+id/btnScanC4"
            android:singleLine="true"/> -->
    <!-- ............................................................ -->
    <!-- ............................................................ -->
    <!-- ............................................................ -->

    <!-- C13 -->

    <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/C8"
            android:layout_alignBottom="@+id/btnScanC7"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/btnScanC7"
            android:id="@+id/btnScanC8"/>

    <!--
    <TextView
            android:id="@+id/txtResultC13"
            android:layout_alignTop="@+id/txtCell13"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:visibility="invisible"
            android:text="@string/RSSV"
            android:layout_toRightOf="@+id/btnScanC13"
            android:singleLine="true"/>  -->

    <!-- ............................................................ -->
    <!-- ............................................................ -->
    <!-- ............................................................ -->

    <!-- C5 -->

    <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/C9"
            android:layout_alignBottom="@+id/btnScanC8"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/btnScanC8"
            android:id="@+id/btnScanC9"/>
    <!--
    <TextView
            android:id="@+id/txtResultC5"
            android:layout_alignTop="@+id/txtCell5"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:visibility="invisible"
            android:text="@string/RSSV"
            android:layout_toRightOf="@+id/btnScanC5"
            android:singleLine="true"/> -->

    <!-- ............................................................ -->
    <!-- ............................................................ -->
    <!-- ............................................................ -->
    <!-- C14 -->

    <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/C10"
            android:layout_below="@id/btnScanC7"
            android:layout_marginLeft="10dp"
            android:id="@+id/btnScanC10"/>
    <!-- <TextView
            android:id="@+id/txtResultC14"
            android:layout_alignTop="@+id/txtCell14"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:visibility="invisible"
            android:text="@string/RSSV"
            android:layout_toRightOf="@+id/btnScanC14"
            android:singleLine="true"/> -->

    <!-- ............................................................ -->
    <!-- ............................................................ -->
    <!-- ............................................................ -->



    <!-- C6 -->

    <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/C11"
            android:layout_alignBottom="@+id/btnScanC10"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/btnScanC10"
            android:id="@+id/btnScanC11"/>
    <!--
    <TextView
            android:id="@+id/txtResultC6"
            android:layout_alignTop="@+id/txtCell6"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:visibility="invisible"
            android:text="@string/RSSV"
            android:layout_toRightOf="@+id/btnScanC6"
            android:singleLine="true"/> -->

    <!-- ............................................................ -->
    <!-- ............................................................ -->
    <!-- ............................................................ -->

    <!-- C15 -->

    <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/C12"
            android:layout_alignBottom="@+id/btnScanC11"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/btnScanC11"
            android:id="@+id/btnScanC12"/>
    <!--
    <TextView
            android:id="@+id/txtResultC15"
            android:layout_alignTop="@+id/txtCell15"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:visibility="invisible"
            android:text="@string/RSSV"
            android:layout_toRightOf="@+id/btnScanC15"
            android:singleLine="true"/> -->

    <!-- ............................................................ -->
    <!-- ............................................................ -->
    <!-- ............................................................ -->


    <!-- C7 -->

    <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/C13"
            android:layout_below="@id/btnScanC10"
            android:layout_marginLeft="10dp"
            android:id="@+id/btnScanC13"/>
    <!--
    <TextView
            android:id="@+id/txtResultC7"
            android:layout_alignTop="@+id/txtCell7"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:visibility="invisible"
            android:text="@string/RSSV"
            android:layout_toRightOf="@+id/btnScanC7"
            android:singleLine="true"/> -->

    <!-- ............................................................ -->
    <!-- ............................................................ -->
    <!-- ............................................................ -->

    <!-- C16 -->

    <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/C14"
            android:layout_alignBottom="@+id/btnScanC13"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/btnScanC13"
            android:id="@+id/btnScanC14"/>
    <!--
    <TextView
            android:id="@+id/txtResultC16"
            android:layout_alignTop="@+id/txtCell16"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:visibility="invisible"
            android:text="@string/RSSV"
            android:layout_toRightOf="@+id/btnScanC16"
            android:singleLine="true"/> -->

    <!-- ............................................................ -->
    <!-- ............................................................ -->
    <!-- ............................................................ -->


    <!-- C8 -->

    <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/C15"
            android:layout_alignBottom="@+id/btnScanC14"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/btnScanC14"
            android:id="@+id/btnScanC15"/>
    <!--
    <TextView
            android:id="@+id/txtResultC8"
            android:layout_alignTop="@+id/txtCell8"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:visibility="invisible"
            android:text="@string/RSSV"
            android:layout_toRightOf="@+id/btnScanC8"
            android:singleLine="true"/> -->
    <!-- ............................................................ -->
    <!-- ............................................................ -->
    <!-- ............................................................ -->

    <!-- C17 -->

    <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/C16"
            android:layout_below="@id/btnScanC13"
            android:layout_marginLeft="10dp"
            android:id="@+id/btnScanC16"/>
    <!--
    <TextView
            android:id="@+id/txtResultC17"
            android:layout_alignTop="@+id/txtCell17"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:visibility="invisible"
            android:text="@string/RSSV"
            android:layout_toRightOf="@+id/btnScanC17"
            android:singleLine="true"/> -->

    <!-- ............................................................ -->
    <!-- ............................................................ -->
    <!-- ............................................................ -->

    <!-- C9 -->

    <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/C17"
            android:layout_alignBottom="@+id/btnScanC16"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/btnScanC16"
            android:id="@+id/btnScanC17"/>
    <!--
    <TextView
            android:id="@+id/txtResultC9"
            android:layout_alignTop="@+id/txtCell9"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:visibility="invisible"
            android:text="@string/RSSV"
            android:layout_toRightOf="@+id/btnScanC9"
            android:singleLine="true"/> -->

    <!-- ............................................................ -->
    <!-- ............................................................ -->
    <!-- ............................................................ -->

    <TextView
            android:id="@+id/timeText"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timeTxt"
            android:textSize="20sp"
            android:layout_toLeftOf="@+id/timer"
            android:layout_alignParentBottom="true"
            android:singleLine="true"/>
    <TextView
            android:id="@+id/timer"
            android:layout_marginRight="35dp"
            android:layout_marginBottom="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer"
            android:textSize="20sp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:singleLine="true"/>
    <Button
            android:layout_width="wrap_content"
            android:text="Save"
            android:id="@+id/btnSave"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:layout_alignBottom="@id/btnScanC17"
            android:layout_toRightOf="@id/btnScanC17"
            android:layout_alignLeft="@+id/timeText"/>

    <ScrollView
            android:id="@+id/SCROLLER_ID"
            android:layout_below="@id/btnScanC16"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="15dp"
            android:layout_width="fill_parent"
            android:layout_toLeftOf="@id/timeText"
            android:layout_height="400dp"
            android:scrollbars="vertical"
            android:fillViewport="true">
    <TextView
            android:id="@+id/RSS_DATA"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:textSize="20sp"/>
    </ScrollView>


</RelativeLayout>

